--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 setuptools>=65.5.1
 wheel
-numpy==1.24.3
+numpy==1.24.3 --only-binary=numpy
 pandas==1.5.3
 streamlit==1.29.0
 python-dotenv==1.0.0
 openai==1.3.0
-pandasai==2.3.0
+pandasai==1.1.4 --no-build-isolation
 PyYAML==6.0.2
 plotly
